k8s/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: cryptopulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: cryptopulse-api:v1.0.0  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
