k8s/etl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etl
  template:
    metadata:
      labels:
        app: etl
    spec:
      containers:
      - name: etl
        image: cryptopulse-etl:latest  # image Docker du job ETL
        imagePullPolicy: Never         # utilise l'image locale
