k8s/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: test-container
    image: httpd:latest
    ports:
    - containerPort: 8080 
    command: ["/bin/sh"]
    args:
      - "-c"
      - "echo \"J'aime la chaine KhgCode\" && httpd-foreground"
