k8s/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: cryptopulse
spec:
  selector:
    app: api
  type: NodePort                        # accessible depuis le navigateur
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30000
