k8s/postgres.yaml
#  Deployment PostgreSQL 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres          # nom du Deployment
spec:
  replicas: 1             # 1 seule copie — on ne veut pas 2 bases de données
  selector:
    matchLabels:
      app: postgres       # relie le Deployment aux Pods qui ont ce label
  template:
    metadata:
      labels:
        app: postgres     # label du Pod — doit correspondre au selector ci-dessus
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine    # même image que dans docker-compose
        ports:
        - containerPort: 5432    # port PostgreSQL dans le conteneur
        volumeMounts:
        - name: init-sql
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: init-sql
        configMap:
          name: postgres-init   # le ConfigMap qu'on vient de créer
---
# Service PostgreSQL 
apiVersion: v1
kind: Service
metadata:
  name: postgres-service  # nom du service l'API utilisera ce nom pour se connecter
spec:
  selector:
    app: postgres         # pointe vers les Pods qui ont le label app: postgres
  ports:
  - port: 5432            # port exposé par le Service
    targetPort: 5432      # port du conteneur
