k8s/api.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: api-ingress
  namespace: cryptopulse
  annotations:
    kubernetes.io/ingress.class: traefik # Dit explicitement à K8s que c'est Traefik qui gère ça
spec:
  rules:
  - host: api.cryptopulse.local  # Le nom de domaine virtuel de l'API
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: # Correction ici : imbriqué sous backend
            name: api-service # Correction ici : imbriqué sous service
            port: # Correction ici : imbriqué sous service
              number: 8000
